--- a/scss/components/_modal.scss
+++ b/scss/components/_modal.scss
@@ -20,4 +20,14 @@
         margin-bottom: 5px;
         
     }
+
+    
+}
+
+hr {
+    margin: 25px 0;
+}
+
+.birthday {
+    margin: 10px 0;
 }
